--- a/custom-email-sign.html
+++ b/custom-email-sign.html
@@ -93,7 +93,7 @@
                                                 </table>
                                             </td>
                                             <td style="padding: 0px; color: rgb(154, 154, 154);">
-                                                <a href="tel:+4407434864952"
+                                                <a href="tel:+918210988052"
                                                     style="text-decoration: none; color: rgb(154, 154, 154); font-size: 12px;">
                                                     <span>+91 8210988052</span>
                                                 </a>
@@ -116,7 +116,7 @@
                                                 </table>
                                             </td>
                                             <td style="padding: 0px;">
-                                                <a href="mailto:hi@munchjones.com"
+                                                <a href="mailto:deepakkum2118@gmail.com"
                                                     style="text-decoration: none; color: rgb(154, 154, 154); font-size: 12px;">
                                                     <span>deepakkum2118@gmail.com</span>
                                                 </a>
